# nanosentencepiece

./: .gitignore  CMakeLists.txt  README.md
apps/: nsp_decode.cpp  nsp_encode.cpp  nsp_inspect.cpp  nsp_train.cpp
data/: tiny_corpus.txt
examples/: demo.sh
include/nanosentencepiece/: bpe_trainer.hpp  cli.hpp  model.hpp  normalization.hpp  processor.hpp  tokenizer.hpp  unigram_trainer.hpp  utf8.hpp  version.hpp  vocabulary.hpp
src/: bpe_trainer.cpp  cli.cpp  model.cpp  normalization.cpp  processor.cpp  tokenizer.cpp  unigram_trainer.cpp  unigram_utils.hpp  utf8.cpp  vocabulary.cpp
tests/: test_main.cpp
